--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ packages = [{include = "notifications_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
+firebase-admin = "^6.0.1"
 
 
 [build-system]
