--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,8 @@ packages = [{include = "notifications_service"}]
 [tool.poetry.dependencies]
 python = "^3.8"
 firebase-admin = "^6.0.1"
+uvicorn = "^0.19.0"
+fastapi = "^0.85.2"
 
 
 [build-system]
