--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -80,3 +80,10 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
+      #----------------------------------------------
+      #              upload coverage reports
+      #----------------------------------------------
+      - name: Upload coverage reports to Codecov with GitHub Action
+        uses: codecov/codecov-action@v3
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
