--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ firebase-admin = "^6.0.1"
 uvicorn = "^0.19.0"
 fastapi = "^0.85.2"
 flake8 = "^5.0.4"
+python-dotenv = "^0.21.0"
 
 
 [build-system]
