--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ uvicorn = "^0.19.0"
 fastapi = "^0.85.2"
 flake8 = "^5.0.4"
 python-dotenv = "^0.21.0"
+SQLAlchemy = "^1.4.43"
+psycopg2-binary = "^2.9.5"
 
 
 [build-system]
