--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,13 +8,14 @@ packages = [{include = "notifications_service"}]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-firebase-admin = "^6.0.1"
 uvicorn = "^0.19.0"
 fastapi = "^0.85.2"
 flake8 = "^5.0.4"
 python-dotenv = "^0.21.0"
 SQLAlchemy = "^1.4.43"
 psycopg2-binary = "^2.9.5"
+exponent-server-sdk = "^2.0.0"
+pytest = "^7.2.0"
 
 
 [build-system]
