--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,13 @@
 version: "3.9"
 
 services:
-  postgres:
+  postgres-notification:
     image: postgres:alpine
     ports: 
       - "5435:5432"
     environment:
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres
     volumes:
       - postgres-okteto-notification:/var/lib/postgresql/data
     
@@ -17,17 +17,7 @@ services:
     ports: 
       - 8000:8000
     depends_on: 
-      - postgres
-
-  pgadmin:
-    image: dpage/pgadmin4
-    environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_MAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_PASSWORD}
-    ports:
-      - "9999:8080"
-    depends_on:
-      - postgres
+      - postgres-notification
 
 volumes:
   postgres-okteto-notification:
